--- a/turnserver.conf
+++ b/turnserver.conf
@@ -1,31 +1,55 @@
-# === Listening IPs ===
-# Listen only on the local machine for this demo.
-listening-ip=127.0.0.1
-relay-ip=127.0.0.1
+# Listen on all available network interfaces inside the host
+listening-ip=0.0.0.0
+relay-ip=0.0.0.0
 
-# === Security and Authentication ===
-# Explicitly enable the long-term credential mechanism to silence the warning.
+# Advertise the host's IP address to clients
+# Docker's special DNS name for the host machine
+# external-ip=host.docker.internal
+
+# --- Security and Authentication ---
 lt-cred-mech
-
-# The realm can be a fake domain for local testing.
 realm=local.domain
-
-# A simple user for the demo. Format is user=password.
 user=demo:password
 
-# === Protocols ===
-# Explicitly disable secure protocols since we aren't using SSL certificates.
-# This makes the setup simple and robust for a local demo.
+# --- Protocols ---
 no-tls
 no-dtls
 
-# === Logging and Process Management ===
-# Specify a log file in a user-writable directory.
+# --- Logging and Process Management ---
 log-file=/var/tmp/turn.log
-
-# Specify a pid file in a user-writable directory to silence the warning.
 pidfile="/var/tmp/turnserver.pid"
-
-# Set a dummy password for the CLI to silence the error message.
-# The CLI will still be inaccessible from the outside.
 cli-password=demopassword
+# # === Listening IPs ===
+# # Listen only on the local machine for this demo.
+# # listening-ip=127.0.0.1
+# # relay-ip=127.0.0.1
+
+# listening-ip=0.0.0.0
+
+
+# # === Security and Authentication ===
+# # Explicitly enable the long-term credential mechanism to silence the warning.
+# lt-cred-mech
+
+# # The realm can be a fake domain for local testing.
+# realm=local.domain
+
+# # A simple user for the demo. Format is user=password.
+# user=demo:password
+
+# # === Protocols ===
+# # Explicitly disable secure protocols since we aren't using SSL certificates.
+# # This makes the setup simple and robust for a local demo.
+# no-tls
+# no-dtls
+
+# # === Logging and Process Management ===
+# # Specify a log file in a user-writable directory.
+# log-file=/var/tmp/turn.log
+
+# # Specify a pid file in a user-writable directory to silence the warning.
+# pidfile="/var/tmp/turnserver.pid"
+
+# # Set a dummy password for the CLI to silence the error message.
+# # The CLI will still be inaccessible from the outside.
+# cli-password=demopassword
