--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,5 @@
 
+
 services:
   postgres_db:
     image: postgres:latest
@@ -27,6 +28,8 @@ services:
     depends_on:
       postgres_db:
           condition: service_healthy
+      # turn:
+      #   condition: service_started
     ports:
       - "8000:8000"
     environment:
@@ -34,6 +37,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: postgres_db
+
+      # TURN_SERVER_HOST: 172.28.1.1
       DOCKER_HOST_IP: ${DOCKER_HOST_IP}
  
       LM_STUDIO_HOST: host.docker.internal
@@ -62,24 +67,23 @@ services:
 
   # The CoTURN Server
   turn:
-    image: coturn/coturn
-    container_name: todo_turn
-    volumes:
-      # Mount your config file into the container
-      - ./turnserver.conf:/etc/coturn/turnserver.conf
-    # The command tells coturn to use your config file
-    command: ["-c", "/etc/coturn/turnserver.conf"]
-    networks:
-      - todo_network 
-    ports:
-      
-      - "3478:3478/tcp"
-      - "3478:3478/udp"
-    restart: unless-stopped
+      image: coturn/coturn
+      container_name: todo_turn
+      volumes:
+        - ./turnserver.conf:/etc/coturn/turnserver.conf
+      command: ["-c", "/etc/coturn/turnserver.conf"]
+      networks:
+        - todo_network 
+      ports:
+        - "3478:3478/tcp"
+        - "3478:3478/udp"
+      restart: unless-stopped
+    
+
 networks:
   todo_network:
     driver: bridge
-
+    
 volumes:
   postgres_data:
-  
+ 
