--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,111 @@
-aioice==0.10.1
-aiortc==1.13.0
-alembic==1.16.4
-annotated-types==0.7.0
-anyio==4.9.0
-async-timeout==5.0.1
-asyncio==3.4.3
-asyncpg==0.30.0
-attrs==25.3.0
-av==14.4.0
-cachetools==5.5.2
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
-cryptography==45.0.5
-distro==1.9.0
-dnspython==2.7.0
-exceptiongroup==1.3.0
-fastapi==0.116.1
-# google-auth==2.40.3
-# google-crc32c==1.7.1
-# google-genai==1.27.0
-greenlet==3.2.3
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-httpx-sse==0.4.1
-idna==3.10
-ifaddr==0.2.0
-iniconfig==2.1.0
-jiter==0.10.0
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-Mako==1.3.10
-MarkupSafe==3.0.2
-mcp==1.12.1
-openai==1.97.1
-packaging==25.0
-pluggy==1.6.0
-psycopg2-binary==2.9.10
-# pyasn1==0.6.1
-# pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-pyee==13.0.0
-Pygments==2.19.2
-pylibsrtp==0.12.0
-pyOpenSSL==25.1.0
-pytest==8.4.1
-pytest-mock==3.14.1
-python-dotenv==1.1.1
-python-multipart==0.0.20
-referencing==0.36.2
-requests==2.32.4
-respx==0.22.0
-rpds-py==0.26.0
-rsa==4.9.1
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-sse-starlette==2.4.1
-starlette==0.47.2
-tenacity==8.5.0
-tomli==2.2.1
-tqdm==4.67.1
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-urllib3==2.5.0
-uvicorn==0.35.0
-websockets==15.0.1
+# This file lists the essential runtime dependencies for the main backend application,
+# which includes the CRUD API, the AI chat service, and the MCP server.
+# Development-only packages like 'pytest' have been excluded.
+
+# --- Core Web Framework ---
+# FastAPI is the main web framework.
+# Uvicorn is the ASGI server to run the application. [standard] includes performance extras.
+fastapi
+uvicorn[standard]
+
+# --- Database Layer ---
+# SQLAlchemy is the ORM used by the main CRUD app.
+# Alembic is used for database migrations.
+# Psycopg2 is the synchronous driver for PostgreSQL, required by Alembic.
+# AsyncPG is the asynchronous driver for PostgreSQL, used by FastAPI.
+# Pydantic-Settings is used for managing configuration from environment variables.
+sqlalchemy
+alembic
+psycopg2-binary
+asyncpg
+pydantic-settings
+
+# --- AI & Real-Time Communication (WebRTC) ---
+# The core library for handling WebRTC connections.
+# This library has many dependencies (cryptography, av, etc.) which pip will install.
+aiortc
+
+# AV is a direct and critical dependency of aiortc for handling media frames.
+# It's good practice to list it explicitly.
+av
+
+# --- External Communication ---
+# A modern, async-capable HTTP client used by the AI to call the CRUD API
+# and the external LM Studio API. Also used by the MCP server.
+httpx
+
+# --- Model Context Protocol (MCP) ---
+# The library for running the MCP server to expose tools to LM Studio.
+mcp
+# aioice==0.10.1
+# aiortc==1.13.0
+# alembic==1.16.4
+# annotated-types==0.7.0
+# anyio==4.9.0
+# async-timeout==5.0.1
+# asyncio==3.4.3
+# asyncpg==0.30.0
+# attrs==25.3.0
+# av==14.4.0
+# cachetools==5.5.2
+# certifi==2025.7.14
+# cffi==1.17.1
+# charset-normalizer==3.4.2
+# click==8.2.1
+# cryptography==45.0.5
+# distro==1.9.0
+# dnspython==2.7.0
+# exceptiongroup==1.3.0
+# fastapi==0.116.1
+# # google-auth==2.40.3
+# # google-crc32c==1.7.1
+# # google-genai==1.27.0
+# greenlet==3.2.3
+# h11==0.16.0
+# httpcore==1.0.9
+# httpx==0.28.1
+# httpx-sse==0.4.1
+# idna==3.10
+# ifaddr==0.2.0
+# iniconfig==2.1.0
+# jiter==0.10.0
+# jsonschema==4.25.0
+# jsonschema-specifications==2025.4.1
+# Mako==1.3.10
+# MarkupSafe==3.0.2
+# mcp==1.12.1
+# openai==1.97.1
+# packaging==25.0
+# pluggy==1.6.0
+# psycopg2-binary==2.9.10
+# # pyasn1==0.6.1
+# # pyasn1_modules==0.4.2
+# pycparser==2.22
+# pydantic==2.11.7
+# pydantic-settings==2.10.1
+# pydantic_core==2.33.2
+# pyee==13.0.0
+# Pygments==2.19.2
+# pylibsrtp==0.12.0
+# pyOpenSSL==25.1.0
+# pytest==8.4.1
+# pytest-mock==3.14.1
+# python-dotenv==1.1.1
+# python-multipart==0.0.20
+# referencing==0.36.2
+# requests==2.32.4
+# respx==0.22.0
+# rpds-py==0.26.0
+# rsa==4.9.1
+# sniffio==1.3.1
+# SQLAlchemy==2.0.41
+# sse-starlette==2.4.1
+# starlette==0.47.2
+# tenacity==8.5.0
+# tomli==2.2.1
+# tqdm==4.67.1
+# typing-inspection==0.4.1
+# typing_extensions==4.14.1
+# urllib3==2.5.0
+# uvicorn==0.35.0
+# websockets==15.0.1
