--- a/turnserver.conf
+++ b/turnserver.conf
@@ -1,7 +1,7 @@
 # Listen on all available network interfaces inside the host
 listening-ip=0.0.0.0
 relay-ip=0.0.0.0
-external-ip=192.168.1.3
+# external-ip=192.168.1.3
 
 # Advertise the host's IP address to clients
 # Docker's special DNS name for the host machine
