--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,16 +1,16 @@
-services:
-  voice-api:
-    build:
-      context: ../voice-service
-      dockerfile: Dockerfile
-    container_name: todo_voice_api
-    ports:
-      - "8001:8001"
-    environment:
-      DOCKER_HOST_IP: ${DOCKER_HOST_IP}
-    networks:
-      - todo_network
-    restart: unless-stopped
-    depends_on:
-      turn:
-        condition: service_healthy
+# services:
+#   voice-api:
+#     build:
+#       context: ../voice-service
+#       dockerfile: Dockerfile
+#     container_name: todo_voice_api
+#     ports:
+#       - "8001:8001"
+#     environment:
+#       DOCKER_HOST_IP: ${DOCKER_HOST_IP}
+#     networks:
+#       - todo_network
+#     restart: unless-stopped
+#     depends_on:
+#       turn:
+#         condition: service_healthy
