--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_HOST=192.168.1.3
-VITE_API_HTTP_PORT=8000
-VITE_VOICE_HTTP_PORT=8001
-VITE_TURN_PORT=3478
+# VITE_API_HOST=192.168.1.3
+# VITE_API_HTTP_PORT=8000
+# VITE_VOICE_HTTP_PORT=8001
+# VITE_TURN_PORT=3478
